# HomeApps

./: .gitignore  Dockerfile  README.md  docker-compose.yml
BusApp/: Dockerfile  app.py  pyproject.toml
BusApp/templates/: index.html
ChatAPI/: Dockerfile  app.py  models.py  pyproject.toml
ChatAPI/audio/: speech_to_text.py  text_to_speech.py
ChatAPI/chat/: free_chat.py  gemini_image.py  openai_chat.py
ChatAPI/pages/: free_chat.py  gemini_chat.py  gemini_image.py  groq_chat.py  openai_chat.py  speech_to_text.py  test_to_speech.py
ChatAPI/static/: chat.js
ChatAPI/task/: qa.py  translate.py
ChatAPI/templates/: index.html
Household_Expenses/: Dockerfile  app.py  process.py  pyproject.toml  start.sh
Household_Expenses/pages/: list.py  summary.py  upload.py
Household_Expenses/templates/: edit.html  index.html  summary.html
app/: app.py  process.py  start.sh
app/pages/: list.py  register.py  summary.py  upload.py
