[project]
name = "bus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "requests>=2.32.5",
    "fastapi>=0.118.3",
    "jinja2>=3.1.6",
    "python-multipart>=0.0.20",
    "uvicorn>=0.37.0",
]
