[project]
name = "chatapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.118.3",
    "google-genai>=1.23.0",
    "groq>=0.29.0",
    "jinja2>=3.1.6",
    "openai>=1.84.0",
    "python-multipart>=0.0.20",
    "python-ulid>=3.1.0",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.37.0",
]
