[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "azure-ai-documentintelligence==1.0.0b4",
    "pillow>=11.2.1",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "jinja2>=3.1.3",
    "pandas>=2.2.2",
    "python-multipart>=0.0.20",
    "aiosqlite>=0.19.0",
    "altair>=5.5.0",
    "groq>=0.37.0",
]
